<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_bluetooth"
        android:icon="@drawable/ic_baseline_bluetooth_24"
        android:title="@string/title_bluetooth"/>

    <item
        android:id="@+id/navigation_commands"
        android:icon="@drawable/ic_baseline_keyboard_24"
        android:title="@string/title_commands" />

    <item
        android:id="@+id/navigation_on_off"
        android:icon="@drawable/ic_baseline_toggle_on_off_24"
        android:title="@string/title_on_off"/>

<!--    <item
        android:id="@+id/navigation_roboarm"
        android:icon="@drawable/ic_baseline_roboarm_24"
        android:title="@string/title_roboarm" />

    <item
        android:id="@+id/navigation_robocar"
        android:icon="@drawable/ic_baseline_robocar_24"
        android:title="@string/title_robocar" />-->
</menu>