<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextLabelPort1"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_edit_port"
        android:ems="10"
        android:inputType="text"
        android:text="@string/label_port1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextLabelPort2"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_edit_port"
        android:ems="10"
        android:inputType="text"
        android:text="@string/label_port2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLabelPort1" />

    <EditText
        android:id="@+id/editTextLabelPort3"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_edit_port"
        android:ems="10"
        android:inputType="text"
        android:text="@string/label_port3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLabelPort2" />

    <EditText
        android:id="@+id/editTextLabelPort4"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_edit_port"
        android:ems="10"
        android:inputType="text"
        android:text="@string/label_port4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLabelPort3" />
</androidx.constraintlayout.widget.ConstraintLayout>